--- a/package.json
+++ b/package.json
@@ -21,19 +21,18 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "@maxim_mazurok/gapi.client.drive": "^3.0.20220313",
     "@popperjs/core": "^2.11.4",
+    "@types/gapi": "^0.0.41",
+    "@types/gapi.auth2": "^0.0.56",
     "@types/gapi.client.drive": "^3.0.13",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.9",
     "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "ng-gapi": "^0.0.94",
+    "moment": ">=2.29.2",
     "ngx-bootstrap": "^8.0.0",
     "rxfire": "^6.0.3",
     "rxjs": "~7.5.0",
     "safe-pipe": "^2.0.2",
-    "ts-google-drive": "^0.0.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
